- New Config: $g_graph_bar_aspect - bar graph aspect ration (height / width)(thraxisp)
- New Config: $g_graph_summary_graphs_per_row - graphs to put in each row in the advanced summary page (thraxisp)
- New Config: $g_max_dropdown_length - length to truncate dropdown menu items to for view_all_bugs_page (thraxisp)
- removed config option - $g_relationship_graph_fontpath replaced by $g_system_font_folder (bpfennig)
- Update Estonian language


2004.12.11  -  0.19.2

- 0003113: [security] LDAP authentication failure (vboctor)
- 0004921: [security] Webmaster email address is exposed to SPAM in html_api.php (vboctor)
- 0004819: [administration] Use of persistent connections prevents upgrade (grangeway)
- 0004822: [administration] Error (?) in graphviz_api (grangeway)
- 0004887: [administration] reset password sent email to user with extral texts (thraxisp)
- 0004901: [administration] When $g_create_project_threshold = MANAGER, and manager creates project, he should automatically be added to project as manager (vboctor)
- 0004916: [administration] Workflow checking is not implemented on bulk Update Status (selecting multiple issues on View Issues) (thraxisp)
- 0004946: [administration] After adding a user redirect to manage_user_edit_page rather than manage_user_page (vboctor)
- 0004947: [administration] "Never Logged In" and "New Accounts" use inconsistent sorting order (vboctor)
- 0004948: [administration] Hyperlink user names in "New Users" and "Never Logged In" (vboctor)
- 0004949: [administration] Remove extra colon at the end of "New Users" and "Never Logged In" (vboctor)
- 0004957: [administration] installation check issue: switch "send reset password" no more recognized? (thraxisp)
- 0004855: [administration] Account Update page shows header twice when there is an error (vboctor)
- 0004525: [customization] $g_bug_link_tag doesn't work when it contains "/" (grangeway)